// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer:checkboxes 1`] = `
<div>
  <div
    class="cxd-Panel cxd-Panel--default cxd-Panel--form"
    style="position: relative;"
  >
    <div
      class="cxd-Panel-heading"
    >
      <h3
        class="cxd-Panel-title"
      >
        <span
          class="cxd-TplField"
        >
          <span>
            The form
          </span>
        </span>
      </h3>
    </div>
    <div
      class="cxd-Panel-body"
    >
      <form
        class="cxd-Form cxd-Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="cxd-Form-item cxd-Form-item--normal"
          data-role="form-item"
        >
          <label
            class="cxd-Form-label"
          >
            <span>
              <span
                class="cxd-TplField"
              >
                <span>
                  Checkboxes
                </span>
              </span>
            </span>
          </label>
          <div
            class="cxd-CheckboxesControl cxd-Form-control is-inline"
          >
            <label
              class="cxd-Checkbox cxd-Checkbox--checkbox cxd-Checkbox--full"
            >
              <input
                type="checkbox"
              />
              <i />
              <span
                class=""
              >
                Option A
              </span>
            </label>
            <label
              class="cxd-Checkbox cxd-Checkbox--checkbox cxd-Checkbox--full"
            >
              <input
                type="checkbox"
              />
              <i />
              <span
                class=""
              >
                Option B
              </span>
            </label>
            <label
              class="cxd-Checkbox cxd-Checkbox--checkbox cxd-Checkbox--full"
            >
              <input
                type="checkbox"
              />
              <i />
              <span
                class=""
              >
                Option C
              </span>
            </label>
            <label
              class="cxd-Checkbox cxd-Checkbox--checkbox cxd-Checkbox--full"
            >
              <input
                type="checkbox"
              />
              <i />
              <span
                class=""
              >
                Option D
              </span>
            </label>
          </div>
        </div>
        <div
          class="cxd-Form-item cxd-Form-item--normal"
          data-role="form-item"
        >
          <label
            class="cxd-Form-label"
          >
            <span>
              <span
                class="cxd-TplField"
              >
                <span>
                  当前值
                </span>
              </span>
            </span>
          </label>
          <div
            class="cxd-Form-static"
          >
            <div
              class="cxd-Form-control"
            >
              <span
                class="cxd-PlainField"
              >
                <span
                  class="text-muted"
                >
                  -
                </span>
              </span>
            </div>
          </div>
        </div>
      </form>
    </div>
    <div
      class="resize-sensor"
      style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: scroll; z-index: -1; visibility: hidden;"
    >
      
  
      <div
        class="resize-sensor-expand"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
      >
        
    
        <div
          style="position: absolute; left: 0px; top: 0px; width: 10px; height: 10px;"
        />
        
  
      </div>
      
  
      <div
        class="resize-sensor-shrink"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
      >
        
    
        <div
          style="position: absolute; left: 0; top: 0; width: 200%; height: 200%"
        />
        
  
      </div>
      
  
      <div
        class="resize-sensor-appear"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;animation-name: apearSensor; animation-duration: 0.2s;"
      />
    </div>
  </div>
</div>
`;

exports[`Renderer:checkboxes 2`] = `
<div>
  <div
    class="cxd-Panel cxd-Panel--default cxd-Panel--form"
    style="position: relative;"
  >
    <div
      class="cxd-Panel-heading"
    >
      <h3
        class="cxd-Panel-title"
      >
        <span
          class="cxd-TplField"
        >
          <span>
            The form
          </span>
        </span>
      </h3>
    </div>
    <div
      class="cxd-Panel-body"
    >
      <form
        class="cxd-Form cxd-Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="cxd-Form-item cxd-Form-item--normal"
          data-role="form-item"
        >
          <label
            class="cxd-Form-label"
          >
            <span>
              <span
                class="cxd-TplField"
              >
                <span>
                  Checkboxes
                </span>
              </span>
            </span>
          </label>
          <div
            class="cxd-CheckboxesControl cxd-Form-control is-inline"
          >
            <label
              class="cxd-Checkbox cxd-Checkbox--checkbox cxd-Checkbox--full"
            >
              <input
                type="checkbox"
              />
              <i />
              <span
                class=""
              >
                Option A
              </span>
            </label>
            <label
              class="cxd-Checkbox cxd-Checkbox--checkbox cxd-Checkbox--full"
            >
              <input
                type="checkbox"
              />
              <i />
              <span
                class=""
              >
                Option B
              </span>
            </label>
            <label
              class="cxd-Checkbox cxd-Checkbox--checkbox cxd-Checkbox--full"
            >
              <input
                type="checkbox"
              />
              <i />
              <span
                class=""
              >
                Option C
              </span>
            </label>
            <label
              class="cxd-Checkbox cxd-Checkbox--checkbox cxd-Checkbox--full"
            >
              <input
                type="checkbox"
              />
              <i />
              <span
                class=""
              >
                Option D
              </span>
            </label>
          </div>
        </div>
        <div
          class="cxd-Form-item cxd-Form-item--normal"
          data-role="form-item"
        >
          <label
            class="cxd-Form-label"
          >
            <span>
              <span
                class="cxd-TplField"
              >
                <span>
                  当前值
                </span>
              </span>
            </span>
          </label>
          <div
            class="cxd-Form-static"
          >
            <div
              class="cxd-Form-control"
            >
              <span
                class="cxd-PlainField"
              >
                a,b
              </span>
            </div>
          </div>
        </div>
      </form>
    </div>
    <div
      class="resize-sensor"
      style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: scroll; z-index: -1; visibility: hidden;"
    >
      
  
      <div
        class="resize-sensor-expand"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
      >
        
    
        <div
          style="position: absolute; left: 0px; top: 0px; width: 10px; height: 10px;"
        />
        
  
      </div>
      
  
      <div
        class="resize-sensor-shrink"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
      >
        
    
        <div
          style="position: absolute; left: 0; top: 0; width: 200%; height: 200%"
        />
        
  
      </div>
      
  
      <div
        class="resize-sensor-appear"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;animation-name: apearSensor; animation-duration: 0.2s;"
      />
    </div>
  </div>
</div>
`;

exports[`Renderer:checkboxes checkall 1`] = `
<div>
  <div
    class="cxd-Panel cxd-Panel--default cxd-Panel--form"
    style="position: relative;"
  >
    <div
      class="cxd-Panel-heading"
    >
      <h3
        class="cxd-Panel-title"
      >
        <span
          class="cxd-TplField"
        >
          <span>
            表单
          </span>
        </span>
      </h3>
    </div>
    <div
      class="cxd-Panel-body"
    >
      <form
        class="cxd-Form cxd-Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="cxd-Form-item cxd-Form-item--normal"
          data-role="form-item"
        >
          <label
            class="cxd-Form-label"
          >
            <span>
              <span
                class="cxd-TplField"
              >
                <span>
                  复选框
                </span>
              </span>
            </span>
          </label>
          <div
            class="cxd-CheckboxesControl cxd-Form-control is-inline"
          >
            <label
              class="cxd-Checkbox cxd-Checkbox--checkbox cxd-Checkbox--full"
            >
              <input
                type="checkbox"
              />
              <i />
              <span
                class=""
              >
                全选/不选
              </span>
            </label>
            <label
              class="cxd-Checkbox cxd-Checkbox--checkbox cxd-Checkbox--full"
            >
              <input
                type="checkbox"
              />
              <i />
              <span
                class=""
              >
                OptionA
              </span>
            </label>
            <label
              class="cxd-Checkbox cxd-Checkbox--checkbox cxd-Checkbox--full"
            >
              <input
                type="checkbox"
              />
              <i />
              <span
                class=""
              >
                OptionB
              </span>
            </label>
            <label
              class="cxd-Checkbox cxd-Checkbox--checkbox cxd-Checkbox--full"
            >
              <input
                type="checkbox"
              />
              <i />
              <span
                class=""
              >
                OptionC
              </span>
            </label>
            <label
              class="cxd-Checkbox cxd-Checkbox--checkbox cxd-Checkbox--full"
            >
              <input
                type="checkbox"
              />
              <i />
              <span
                class=""
              >
                OptionD
              </span>
            </label>
          </div>
        </div>
      </form>
    </div>
    <div
      class="cxd-Panel-footerWrap"
    >
      <div
        class="cxd-Panel-btnToolbar cxd-Panel-footer"
      >
        <button
          class="cxd-Button cxd-Button--primary"
          type="submit"
        >
          <span>
            提交
          </span>
        </button>
      </div>
    </div>
    <div
      class="resize-sensor"
      style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: scroll; z-index: -1; visibility: hidden;"
    >
      
  
      <div
        class="resize-sensor-expand"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
      >
        
    
        <div
          style="position: absolute; left: 0px; top: 0px; width: 10px; height: 10px;"
        />
        
  
      </div>
      
  
      <div
        class="resize-sensor-shrink"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
      >
        
    
        <div
          style="position: absolute; left: 0; top: 0; width: 200%; height: 200%"
        />
        
  
      </div>
      
  
      <div
        class="resize-sensor-appear"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;animation-name: apearSensor; animation-duration: 0.2s;"
      />
    </div>
  </div>
</div>
`;

exports[`Renderer:checkboxes columnsCount 1`] = `
<div>
  <div
    class="cxd-Panel cxd-Panel--default cxd-Panel--form"
    style="position: relative;"
  >
    <div
      class="cxd-Panel-heading"
    >
      <h3
        class="cxd-Panel-title"
      >
        <span
          class="cxd-TplField"
        >
          <span>
            表单
          </span>
        </span>
      </h3>
    </div>
    <div
      class="cxd-Panel-body"
    >
      <form
        class="cxd-Form cxd-Form--horizontal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="cxd-Form-item cxd-Form-item--horizontal"
          data-role="form-item"
        >
          <label
            class="cxd-Form-label cxd-Form-itemColumn--normal"
          >
            <span>
              <span
                class="cxd-TplField"
              >
                <span>
                  显示两列的复选框
                </span>
              </span>
            </span>
          </label>
          <div
            class="cxd-Form-value"
          >
            <div
              class="cxd-CheckboxesControl cxd-Form-control"
            >
              <div
                class="cxd-Grid"
              >
                <div
                  class="cxd-Grid-col--sm6"
                >
                  <label
                    class="cxd-Checkbox cxd-Checkbox--checkbox cxd-Checkbox--full"
                  >
                    <input
                      type="checkbox"
                    />
                    <i />
                    <span
                      class=""
                    >
                      OptionA
                    </span>
                  </label>
                </div>
                <div
                  class="cxd-Grid-col--sm6"
                >
                  <label
                    class="cxd-Checkbox cxd-Checkbox--checkbox cxd-Checkbox--full"
                  >
                    <input
                      type="checkbox"
                    />
                    <i />
                    <span
                      class=""
                    >
                      OptionB
                    </span>
                  </label>
                </div>
              </div>
              <div
                class="cxd-Grid"
              >
                <div
                  class="cxd-Grid-col--sm6"
                >
                  <label
                    class="cxd-Checkbox cxd-Checkbox--checkbox cxd-Checkbox--full"
                  >
                    <input
                      type="checkbox"
                    />
                    <i />
                    <span
                      class=""
                    >
                      OptionC
                    </span>
                  </label>
                </div>
                <div
                  class="cxd-Grid-col--sm6"
                >
                  <label
                    class="cxd-Checkbox cxd-Checkbox--checkbox cxd-Checkbox--full"
                  >
                    <input
                      type="checkbox"
                    />
                    <i />
                    <span
                      class=""
                    >
                      OptionD
                    </span>
                  </label>
                </div>
              </div>
            </div>
          </div>
        </div>
      </form>
    </div>
    <div
      class="cxd-Panel-footerWrap"
    >
      <div
        class="cxd-Panel-btnToolbar cxd-Panel-footer"
      >
        <button
          class="cxd-Button cxd-Button--primary"
          type="submit"
        >
          <span>
            提交
          </span>
        </button>
      </div>
    </div>
    <div
      class="resize-sensor"
      style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: scroll; z-index: -1; visibility: hidden;"
    >
      
  
      <div
        class="resize-sensor-expand"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
      >
        
    
        <div
          style="position: absolute; left: 0px; top: 0px; width: 10px; height: 10px;"
        />
        
  
      </div>
      
  
      <div
        class="resize-sensor-shrink"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
      >
        
    
        <div
          style="position: absolute; left: 0; top: 0; width: 200%; height: 200%"
        />
        
  
      </div>
      
  
      <div
        class="resize-sensor-appear"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;animation-name: apearSensor; animation-duration: 0.2s;"
      />
    </div>
  </div>
</div>
`;

exports[`Renderer:checkboxes group 1`] = `
<div>
  <div
    class="cxd-Panel cxd-Panel--default cxd-Panel--form"
    style="position: relative;"
  >
    <div
      class="cxd-Panel-heading"
    >
      <h3
        class="cxd-Panel-title"
      >
        <span
          class="cxd-TplField"
        >
          <span>
            表单
          </span>
        </span>
      </h3>
    </div>
    <div
      class="cxd-Panel-body"
    >
      <form
        class="cxd-Form cxd-Form--horizontal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="cxd-Form-item cxd-Form-item--horizontal"
          data-role="form-item"
        >
          <label
            class="cxd-Form-label cxd-Form-itemColumn--normal"
          >
            <span>
              <span
                class="cxd-TplField"
              >
                <span>
                  城市选择
                </span>
              </span>
            </span>
          </label>
          <div
            class="cxd-Form-value"
          >
            <div
              class="cxd-CheckboxesControl cxd-Form-control"
            >
              <div
                class="cxd-CheckboxesControl-group"
              >
                <label
                  class="cxd-CheckboxesControl-groupLabel"
                >
                  A类型
                </label>
                <label
                  class="cxd-Checkbox cxd-Checkbox--checkbox cxd-Checkbox--full"
                >
                  <input
                    type="checkbox"
                  />
                  <i />
                  <span
                    class=""
                  >
                    a-1
                  </span>
                </label>
                <label
                  class="cxd-Checkbox cxd-Checkbox--checkbox cxd-Checkbox--full"
                >
                  <input
                    type="checkbox"
                  />
                  <i />
                  <span
                    class=""
                  >
                    a-2
                  </span>
                </label>
              </div>
              <div
                class="cxd-CheckboxesControl-group"
              >
                <label
                  class="cxd-CheckboxesControl-groupLabel"
                >
                  B类型
                </label>
                <label
                  class="cxd-Checkbox cxd-Checkbox--checkbox cxd-Checkbox--full"
                >
                  <input
                    type="checkbox"
                  />
                  <i />
                  <span
                    class=""
                  >
                    b-1
                  </span>
                </label>
                <label
                  class="cxd-Checkbox cxd-Checkbox--checkbox cxd-Checkbox--full"
                >
                  <input
                    type="checkbox"
                  />
                  <i />
                  <span
                    class=""
                  >
                    b-2
                  </span>
                </label>
                <label
                  class="cxd-Checkbox cxd-Checkbox--checkbox cxd-Checkbox--full"
                >
                  <input
                    type="checkbox"
                  />
                  <i />
                  <span
                    class=""
                  >
                    b-3
                  </span>
                </label>
                <label
                  class="cxd-Checkbox cxd-Checkbox--checkbox cxd-Checkbox--full"
                >
                  <input
                    type="checkbox"
                  />
                  <i />
                  <span
                    class=""
                  >
                    b-4
                  </span>
                </label>
              </div>
            </div>
          </div>
        </div>
      </form>
    </div>
    <div
      class="cxd-Panel-footerWrap"
    >
      <div
        class="cxd-Panel-btnToolbar cxd-Panel-footer"
      >
        <button
          class="cxd-Button cxd-Button--primary"
          type="submit"
        >
          <span>
            提交
          </span>
        </button>
      </div>
    </div>
    <div
      class="resize-sensor"
      style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: scroll; z-index: -1; visibility: hidden;"
    >
      
  
      <div
        class="resize-sensor-expand"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
      >
        
    
        <div
          style="position: absolute; left: 0px; top: 0px; width: 10px; height: 10px;"
        />
        
  
      </div>
      
  
      <div
        class="resize-sensor-shrink"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
      >
        
    
        <div
          style="position: absolute; left: 0; top: 0; width: 200%; height: 200%"
        />
        
  
      </div>
      
  
      <div
        class="resize-sensor-appear"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;animation-name: apearSensor; animation-duration: 0.2s;"
      />
    </div>
  </div>
</div>
`;
